# skel

./: Cargo.toml  Taskfile.yaml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
src/: cli.rs  lib.rs  main.rs
