[package]
name = "skel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
figment = { version = "0.10.8", features = ["env", "yaml"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tera = "1.18.0"
